apps/forgejo/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: app-volume
      containers:
        - name: app
          image: codeberg.org/forgejo/forgejo:15-rootless@sha256:90a7b5b335dd84dbed7f031f2721ae877c713a9226a2b246bc0ed7e1fc7dd9ec
          volumeMounts:
            - name: volume
              mountPath: /var/lib/gitea
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          ports:
            - name: http
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels: &labels
    app.kubernetes.io/component: app
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-route
  annotations:
    internal-dns.alpha.kubernetes.io/target: internal.beaver-cloud.xyz
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-beaver-cloud
      namespace: envoy-gateway-system
  hostnames:
    - forgejo.beaver-cloud.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: app-service
          port: 80
          weight: 1
